# ex5_3_silhouettes

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.devcontainer/: .env  .env-secrets.example  devcontainer.json  docker-compose.yml
